--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,14 @@
 {
   "rewrites": [
-    { "source": "(.*)", "destination": "api/index.go" }
+    {
+      "source": "(.*)",
+      "destination": "api/index.go"
+    }
+  ],
+  "builds": [
+    {
+      "src": "*.html",
+      "use": "@vercel/views"
+    }
   ]
 }
